work on thesis and update project

--- a/Master Thesis/diplomski.tex
+++ b/Master Thesis/diplomski.tex
@@ -70,7 +70,7 @@ Traditionally, the focus of \textit{de novo} genome assembly has always been on 
 
 We will try to do this using novel algorithms from the field of \textit{deep learning} (DL), which is itself a subfield of \textit{machine learning} (ML). Bioinformatics has long been dominated by algorithms that employ complex heuristics and expert knowledge to find solutions to the problems researchers face \cite{compeau_pevzner_2015}. This is however slowly changing. More and more research is being done using ML to solve problems in bioinformatics, foregoing the laborious process of feature engineering and extensive human intervention. First, ML was employed only for finding dense and abstract representations of genome features, but it later started to completely replace the previously mentioned algorithms. It has since contributed tremendously to the field and shows no signs of stopping, the most notable achievement being the solution to the protein folding problem which previously wasn't solvable for 50 years \cite{alphafold}. Still, there remains a long way to go before ML, and to an extent, DL, becomes completely standard within the field. Thus, this thesis is concerned with applying recent DL techniques in order to solve the problem of separating haplotypes in genomes. This could not only potentially improve existing solutions to the problem at hand and reduce the necessity for human expert intervention, but also bring bioinformatics to a wider range of people who may not necessarily have a deep understanding of genetics \cite{dl_bioinformatics}.
 
-In this chapter, we will first give a brief introduction to bioinformatics, the task at hand, and deep learning. In Chapter \ref{ch:dataset}, we will explain our dataset and its creation in detail. Then, in Chapter \ref{ch:implementation}, we will go over all the software and methods we used to achieve our goals, as well as describe our code and model in more detail. Next, in Chapter \ref{ch:results}, we will list and describe all the important results obtained during experimenting and try to explain our findings. Finally, in Chapter \ref{ch:conclusion}, we will summarize our work an results and give ideas for future work.
+In this chapter, we will first give a brief introduction to bioinformatics, the task at hand, and deep learning. In Chapter \ref{ch:dataset}, we will explain our dataset and its creation in detail. Then, in Chapter \ref{ch:implementation}, we will go over all the software and methods we used to achieve our goals, as well as describe our code and model in more detail. Next, in Chapter \ref{ch:results}, we will list and describe all the important results obtained during experimenting and try to explain our findings. Finally, in Chapter \ref{ch:conclusion}, we will summarize our work and results and give ideas for future work.
 
 \section{Bioinformatics}
 
@@ -79,7 +79,7 @@ Bioinformatics is an interdisciplinary field of research that has had a tremendo
 \subsection{The Process of Sequencing \& Assembly}
 \label{subsec:the process of sequencing and assembly}
 
-In an ideal world, we would extract a human genome in the form of DNA from a cell, input it into a \textit{sequencer}, and get a complete and accurate sequence of a DNA molecule as output with no \textit{base pairs}\footnote{The four base pairs that constitute DNA are: adenine, cytosine, guanine, and thymine.} missing, which we could immediately use for further studying. Unfortunately, this perfect process is not (yet) a reality and it is hard to predict when this might become so. Due to this, we have to make due with sequencers that can only output genomes in the form of thousands of fragmented \textit{reads}, in our case at a median length of between 15 - 25 kilobase pairs (kbp) long, with shorter read sequencers sequencing reads at lengths of around 150 base pairs (bp) long in a process called \textit{shotgun sequencing}. There are also ultra-long reads with a maximum length of around 1 Mbp with a median length of 75 kbp, but these are not used for our experiments, as they are also of a smaller precision, something which is crucial for the success of our application. An average genome is much longer than that, e.g. the yeast genome is around 12 Mb long \cite{yeast} and the human genome is around 6.4 Gb long \cite{human}, so after sequencing, we need to assemble these short reads into longer ones before going further into analysis.
+In an ideal world, we would extract a human genome in the form of DNA from a cell, input it into a \textit{sequencer}, and get a complete and accurate sequence of a DNA molecule as output with no \textit{base pairs}\footnote{The four base pairs that constitute DNA are: adenine, cytosine, guanine, and thymine.} missing, which we could immediately use for further studying. Unfortunately, this perfect process is not (yet) a reality and it is hard to predict when this might become so. Due to this, we have to make due with sequencers that can only output genomes in the form of thousands of fragmented \textit{reads}, in our case at a median length of between 15 - 25 kilobase pairs (kbp) long, with shorter read sequencers sequencing reads at lengths of around 150 base pairs (bp) long in a process called \textit{shotgun sequencing}. There are also ultra-long reads with a maximum length of around 1 Mbp with a median length of 75 kbp, but these are not used for our experiments, as they are also of a smaller precision, something which is crucial for the success of our application. An average genome is much longer than that, e.g. the yeast genome is around 12 Mb long \cite{yeast} and the human genome is around 6.4 Gb long \cite{human} while counting both haploids, so after sequencing, we need to assemble these short reads into longer ones before going further into analysis.
 
 This process of assembling shorter reads into larger structures, called \textit{contigs}, is called \textit{assembly}, depicted as steps one through three in Figure \ref{fig:genome assembly}. We can use the overlaps between sequences (step two in Figure \ref{fig:genome assembly}) to build graphs in which each read is represented with a node, and each overlap between reads is represented with an edge in the graph. An overlap can be described as a match between two reads' \textit{ends}, i.e. the read's prefix (start) and suffix (end), which can come in the form of a prefix - suffix or an suffix - prefix overlap. The length of this overlap can indicate a stronger similarity between two reads, and therefore a stronger link in the graph between them. After we have found enough strong overlaps, we can finally combine reads into contigs. Lastly, we are tasked with finding the longest possible path on this graph to connect the individual contigs and form a complete genome. We also need to orient them properly, depicted as step four in Figure \ref{fig:genome assembly}.
 
@@ -109,7 +109,7 @@ AAGCTTGCAGATTTATTAACAGTTCAAACGAGTTTGGCTGATAATGCTCGTGCAGGTATTGATCGTACGTACGTAGCTAC
 
 After generating various information about our dataset, we would store it in a CSV (comma separated values) file. That way, it could be  more easily read by some of the tools we used for extracting data from reads (Section \ref{sec:technology stack}). A CSV file can be thought of as a table, where values in a row are separated with a comma sign. The file starts with a header with column names that are also separated with commas.
 
-Another reason why we use the CSV file format is because of the Raven assembler (Section \ref{subsec:assembling the graph}) outputting a CSV file with information about sequence overlap lengths. This information is stored in the file in the following way. We start in a descending order of read name. A line with an even index number represents an original read, while a line with an odd index number represents a \textit{virtual} read, i.e. a \textit{reverse complement} or \textit{strand} of the original read. A reverse complement represents the same sequence as the original, but in reverse order and with the base pairs replaced with their complements (A - T, C - G). The original and the reverse complement essentially represent the same genomic data, but on different strands of the DNA, which are either a forward or backward strand. An example of such a file ican be seein in the following example:
+Another reason why we use the CSV file format is because of the Raven assembler (Section \ref{subsec:assembling the graph}) outputting a CSV file with information about sequence overlap lengths. This information is stored in the file in the following way. We start in a descending order of read name. A line with an even index number represents an original read, while a line with an odd index number represents a \textit{virtual} read, i.e. a \textit{reverse complement} or \textit{strand} of the original read. A reverse complement represents the same sequence as the original, but in reverse order and with the base pairs replaced with their complements (A - T, C - G). The original and the reverse complement essentially represent the same genomic data, but on different strands of the DNA, which are either a forward or backward strand. An example of such a file can be seen in the following example:
 \begin{lstlisting}
 6549 [3274] LN:i:9216 RC:i:1,6412 [3206] LN:i:11360 RC:i:1,1,39678 8937 0 0.992832
 6413 [3206] LN:i:11360 RC:i:1,6548 [3274] LN:i:9216 RC:i:1,1,39679 11081 0 0.992832
@@ -627,7 +627,7 @@ There are numerous important hyperparameters that can be adjusted to optimize tr
 \chapter{Results}
 \label{ch:results}
 
-In this chapter, we will present the results obtained in the experiments we performed with the purpose of answering this thesis' main question: can GNNs be used to separate haplotypes. First, we will go over the experiments we performed on only one chromosome (Section \ref{sec:experiments on one chromosome}), then over the experiments we performed on the whole genome (Section \ref{sec:experiments on the whole genome}), an lastly, we will explain experiments performed on multiple chromosomes to test some assertions we made (Section \ref{sec:experiments on different chromosomes}). But before we go into all of that, we first need to explain some metrics we used in the experiments.
+In this chapter, we will present the results obtained in the experiments we performed with the purpose of answering this thesis' main question: can GNNs be used to separate haplotypes. First, we will go over the experiments we performed on only one chromosome (Section \ref{sec:experiments on one chromosome}), then over the experiments we performed on the whole genome (Section \ref{sec:experiments on the whole genome}), and lastly, we will explain experiments performed on multiple chromosomes to test some assertions we made (Section \ref{sec:experiments on different chromosomes}). But before we go into all of that, we first need to explain some metrics we used in the experiments.
 
 \section{Performance Metrics}
 
@@ -644,7 +644,7 @@ Put into words, it is the number of \textit{true positive} examples (everything 
 \label{subsec:f1 score}
 
 F1-score is a more complex metric than the previously described accuracy score, but is also more informative about model results. It belongs to a family of scores known as \textit{F-scores}, which can be described with the following equation:
-\[ F_1 = (1 + \beta^2) \cdot \frac{\mathrm{precision} \cdot \mathrm{recall}}{\beta^2 \cdot \mathrm{precision} + \mathrm{recall}} \] where:
+\[ \mathrm{F_\beta} = (1 + \beta^2) \cdot \frac{\mathrm{precision} \cdot \mathrm{recall}}{\beta^2 \cdot \mathrm{precision} + \mathrm{recall}} \] where:
 \[ \mathrm{precision} = \frac{\mathrm{TP}}{\mathrm{TP} + \mathrm{FP}} \]
 \[ \mathrm{recall} = \frac{\mathrm{TP}}{\mathrm{TP} + \mathrm{FN}} \]
 Precision measures how many of the examples we classified as positive are truly positive, while recall measures how many of the positive examples present in the dataset our model actually classified as positive.
@@ -787,7 +787,7 @@ The precision and recall graphs are depicted in Figure \ref{fig:precision and re
 \chapter{Conclusion}
 \label{ch:conclusion}
 
-Bioinformatics is an important field of scientific inquiry with many different real-world applications and wide reaching effects. With the recent rise in deep learning, there remains a large gap in bioinformatics research to be filled, with numerous algorithms waiting to be improved with more state-of-the art methods from the field of deep learning, and to an extent, machine learning. In this regard, we here employ deep learning algorithms, specifically, Graph Neural Networks, to improve the process of haplotype separation. We test out numerous methods in order to find the best performing ones, and then perform further experiments with it on different datasets. The obtained results prove that, even without meticulous parameter optimization and while using mostly basic features, we can successfully separate haplotypes using Graph Neural Networks. However, numerous problems still present themselves, and new ones have also come up. Maybe the biggest issue faced here is the long and tedious pipeline of generating appropriate training data that heavily depends on the software used. We admittedly got lucky, and generated "good enough" data after only a few tries, but this setup is still far from optimal and more in-depth dataset analysis should be performed in future work. For instance, parameters such as graph size and mutation frequency are an important topic for dataset performance that has barely been touched upon here, but can greatly influence the results of the model. These parameters should be optimized based on the use case and should simulate real-world data.
+Bioinformatics is an important field of scientific inquiry with many different real-world applications and wide reaching effects. With the recent rise in deep learning, there remains a large gap in bioinformatics research to be filled, with numerous algorithms waiting to be improved with more state-of-the art methods from the field of deep learning, and to an extent, machine learning. In this regard, we here employ deep learning algorithms, specifically, Graph Neural Networks, to improve the process of haplotype separation. We test out numerous methods in order to find the best performing one, and then perform further experiments with it on different datasets. The obtained results prove that, even without meticulous parameter optimization and while using mostly basic features, we can successfully separate haplotypes using Graph Neural Networks. However, numerous problems still present themselves, and new ones have also come up. Maybe the biggest issue faced here is the long and tedious pipeline of generating appropriate training data that heavily depends on the software used. We admittedly got lucky, and generated "good enough" data after only a few tries, but this setup is still far from optimal and more in-depth dataset analysis should be performed in future work. For instance, parameters such as graph size and mutation frequency are an important topic for dataset performance that has barely been touched upon here, but can greatly influence the results of the model. These parameters should be optimized based on the use case and should simulate real-world data.
 
 One consistent issue we faced with the simulated data was the fact that only one haplotype was successfully separated, with the other one being highly fragmented. In essence, during training, our model didn't separate the haplotypes as much as "cleaning" one haplotype by removing parts of the other haplotype from it, as seen in Figure \ref{fig:separated graph after training}. However, this problem wasn't the fault of our model, as much as of the Raven assembler used for assembling reads. We used Pacific Biosciences HiFi data for our experiments due to its high accuracy, but the Raven assembler wasn't optimized for it. Due to this, even before training our models, the haplotypes were suboptimally separated, as can be seen in Figure \ref{fig:separated graph}. Nevertheless, this data was good enough for giving us valuable insights into the topic.
 
@@ -815,7 +815,7 @@ Haplotype separation is an important task in bioinformatics with numerous real-w
 \hrtitle{Korištenje graf neuronskih mreža za odvajanje haplotipa u grafovima astavljanja}
 \begin{sazetak}
 	
-Razdvajanje haplotipa je bitan zadatak u bioinformatici sa raznim primjenama u stvarnom svijetu. Tradicionalno, za rješavanje ovoga zadatka su korištene razne heuristike i ručno rađeni algoritmi. Sa nedavnim usponom algoritama dubokog učenja, specifično, Graf Neuronskih Mreža, ostaje velika praznina u sitraživanju koju treba ispuniti poboljšanjem algoritama. Primjenjujemo Graf Neuronske Mreže za razdvajanje haplotipa na podatcima kvasca i naši rezultati na sintetičkim podacima su uspješni, time dokazujući snagu ove metode. Najbolji model, Graf Neuronska Mreža s Pažnjom na Bridovima je imala F1-vrijendost od 85.13\%, pri ćemu je jedan haplotip bio gotovo savršeno odvojen, a problemi su se javljali samo kod drugoga zbog visoke fragmentacije. Model je koristio mehanizam pažnje na značajkama i čvorova i bridova da bi iskoristio sve dostupne podatke u grafu. Na žalost, mnogo problema i dalje nije riješeno, gdje je najveći problem neispravni proces stvaranja podataka haplotipa. Ipak, ovaj rad otvara razne puteve istraživanja za ovu temu i daje korisnu bazu.
+Razdvajanje haplotipa je bitan zadatak u bioinformatici sa raznim primjenama u stvarnom svijetu. Tradicionalno, za rješavanje ovoga zadatka su korištene razne heuristike i ručno rađeni algoritmi. Sa nedavnim usponom algoritama dubokog učenja, specifično, Graf Neuronskih Mreža, ostaje velika praznina u istraživanju koju treba ispuniti poboljšanjem algoritama. Primjenjujemo Graf Neuronske Mreže za razdvajanje haplotipa na podatcima kvasca i naši rezultati na sintetičkim podacima su uspješni, time dokazujući snagu ove metode. Najbolji model, Graf Neuronska Mreža s Pažnjom na Bridovima je imala F1-vrijendost od 85.13\%, pri ćemu je jedan haplotip bio gotovo savršeno odvojen, a problemi su se javljali samo kod drugoga zbog visoke fragmentacije. Model je koristio mehanizam pažnje na značajkama i čvorova i bridova da bi iskoristio sve dostupne podatke u grafu. Na žalost, mnogo problema i dalje nije riješeno, gdje je najveći problem neispravni proces stvaranja podataka haplotipa. Ipak, ovaj rad otvara razne puteve istraživanja za ovu temu i daje korisnu bazu.
 
 \kljucnerijeci{Bioinformatika, Graf Neuronske Mreže, GNN, Odvajanje haplotipa, Duboko Učenje, Strojno Učenje}
 \end{sazetak}
