--- a/Master Thesis/diplomski.tex
+++ b/Master Thesis/diplomski.tex
@@ -156,7 +156,7 @@ Aside from the mentioned file formats, we created numerous other files of our ow
 
 \section{Thesis Task}
 
-The task we are presented with here is slightly different compared to standard genome assembly. Instead of just finding a path through the assembly graph in order to assemble a complete genome, we are instead tasked with removing edges in the graph that connect contigs belonging to different parents. By doing this, we are essentially separating the two haplotypes that constitute a genome. To give more insight into this, we will explain what graphs are and how we use them in the following section.
+The task we are presented with here is slightly different compared to standard genome assembly. Instead of just finding a path through the assembly graph in order to assemble a complete genome, we are instead tasked with removing edges in the graph that connect contigs belonging to different parents. In terms of machine learning, it amounts to assigning each edge in the graph a class, where the classes are \textit{this edge connects two nodes belonging to the same haplotype} or \textit{this edge connects two nodes belonging to different haplotypes}. By doing this, we are essentially separating the two haplotypes that constitute a genome. To give more insight into this, we will explain what graphs are and how we use them in the following section.
 
 \begin{figure}
 	\centering
@@ -477,12 +477,12 @@ There are a lot of readily available datasets for experimenting on graphs and ge
 
 \subsection{Simulating \& Mutating Reads}
 
-Generating the reads for the dataset is a multi-step process. The yeast genome was stored in a simple FASTA file (Section \ref{subsubsec:fasta and fastq}) with the chromosomes written down in order. In the first step, we would simply extract the desired chromosome from the FASTA file or use the entire file for the genome-wide dataset. In the next step, in order to simulate fragmented chromosomes like if they were obtained in the process of shotgun sequencing (Section \ref{subsec:the process of sequencing and assembly}), we needed to generate artificial reads from the chromosome. This was done using the \texttt{seqrequester}\footnote{https://github.com/marbl/seqrequester} package and its \texttt{generate} functionality for generating reads. By setting the \texttt{-nreads} flag to the desired number, we could specify the number of reads the program would generate, and using the \texttt{-distribution} flag, we could choose the desired distribution for the reads (in our case, \texttt{pacbio-hifi}\footnote{https://www.pacb.com/technology/hifi-sequencing/}). We did this $n$ times, where $n$ is the number of graphs we wanted to generate for training, usually 100 for training and one for validation. After this was done, we ended up with $n$ files filled with simulated reads. We used a small C++ program\footnote{Courtesy of R. Vaser.} to mutate these reads into new ones of the same length with a mutation frequency of 0.01, meaning that every 100 base pairs, a base pair would get mutated into its complement base pair. Now, if the original simulated reads represented the mother's reads, these mutated ones could be thought of as the father's reads. Lastly, we combined the father's and mother's reads from each of the $2n$ ($n$ for the father's and $n$ for the mother's reads) files into a single file by concatenating them, which left us with $n$ files that were ready for the final sequencing process where we would obtain contigs and their overlaps which we could use for training our model.
+Generating the reads for the dataset is a multi-step process. The yeast genome was stored in a simple FASTA file (Section \ref{subsubsec:fasta and fastq}) with the chromosomes written down in order. In the first step, we would simply extract the desired chromosome from the FASTA file or use the entire file for the genome-wide dataset. In the next step, in order to simulate fragmented chromosomes like if they were obtained in the process of shotgun sequencing (Section \ref{subsec:the process of sequencing and assembly}), we needed to generate artificial reads from the chromosome. This was done using the \texttt{seqrequester}\footnote{https://github.com/marbl/seqrequester} package and its \texttt{generate} functionality for generating reads. By setting the \texttt{-nreads} flag to the desired number, we could specify the number of reads the program would generate, and using the \texttt{-distribution} flag, we could choose the desired distribution for the reads (in our case, \texttt{pacbio-hifi}\footnote{https://www.pacb.com/technology/hifi-sequencing/}). We did this $n$ times, where $n$ is the number of graphs we wanted to generate for training, usually 100 for training and one for validation. After this was done, we ended up with $n$ files filled with simulated reads. We used a small C++ program\footnote{Courtesy of R. Vaser.} to mutate these reads into new ones of the same length with a mutation frequency of 0.01, meaning that every 100 base pairs, a base pair would get mutated into its complement base pair. This was done to obtain two different haplotypes, both stemming from the same genome. If the original simulated reads represented the mother's haplotype, these mutated ones could be thought of as the father's haplotype. Lastly, we combined the father's and mother's reads from each of the $2n$ ($n$ for the father's and $n$ for the mother's reads) files into a single file by concatenating them, which left us with $n$ files that were ready for the final sequencing process where we would obtain contigs and their overlaps which we could use for training our model.
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\textwidth]{images/graph_example.png}
-	\caption[Graph]{Example of a graph obtained after sequencing and assembly. Orange nodes represent mutated reads, while green nodes represent the original non-mutated reads. We would generate in surplus of 100 of these graphs in order to train our model. This graph was obtained using the Graphia\footnotemark{} graphing tool.}
+	\caption[Graph]{Example of a graph obtained after sequencing and assembly. Orange nodes represent mutated reads (now contigs), while green nodes represent the original non-mutated reads. We would generate in surplus of 100 of these graphs in order to train our model. This graph was obtained using the Graphia\footnotemark{} graphing tool.}
 	\label{fig:graph}
 \end{figure}
 \footnotetext{https://graphia.app/}
@@ -495,12 +495,12 @@ We found that generating 5000 - 10 000 reads gave satisfactory results in combin
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\textwidth]{images/separated_haplotypes_before_training.png}
-	\caption[Separated graph]{Example of a graph obtained after sequencing and assembly. This is the same graph as the one that can be seen in Figure \ref{fig:graph}, only in this case, the haplotypes are separated. Orange nodes represent mutated reads, while green nodes represent the original non-mutated reads. We can see the high completeness of the green graph and high fragmentation of the orange graph. This graph was obtained using the Graphia\footnotemark{} graphing tool.}
+	\caption[Separated graph]{Example of a graph obtained after sequencing and assembly. This is the same graph as the one that can be seen in Figure \ref{fig:graph}, only in this case, the haplotypes are separated. Orange nodes represent mutated reads (now contigs), while green nodes represent the original non-mutated reads. We can see the high completeness of the green graph and high fragmentation of the orange graph. This graph was obtained using the Graphia\footnotemark{} graphing tool.}
 	\label{fig:separated graph}
 \end{figure}
 \footnotetext{https://graphia.app/}
 
-After Raven is done with the assembly process, it outputs two files: a GFA file (Section \ref{subsubsec:gfa}) and CSV file (Section \ref{subsubsec:csv}). They both contain information about the contigs and their overlaps in a format suitable for generating a graph. They also contained different information in each, so to fully utilize all the graph information we had available to us, we needed to use both files. From the GFA file, we extract information about which contig belongs to the mutated reads and which one to the original simulated ones, as well as contig overlap length information. We extract them to a separate file for easier analysis and quicker fetching. An example of a graph obtained after assembly can be seen in Figure \ref{fig:graph}. Now, as we previously mentioned, our task is to separate the contigs into the father's and the mother's genome. In other words, if we are presented with a graph where nodes represent contigs and edges represent the overlaps between them, we need to remove edges between contigs that don't belong to the same parent. So for each edge, we specify if it's "correct",i.e. it connects two contigs belonging to the same parent, or "incorrect", meaning it connect two contigs belonging to different parents.
+After Raven is done with the assembly process, it outputs two files: a GFA file (Section \ref{subsubsec:gfa}) and CSV file (Section \ref{subsubsec:csv}). They both contain information about the contigs and their overlaps in a format suitable for generating a graph. They also contained different information in each, so to fully utilize all the graph information we had available to us, we needed to use both files. From the GFA file, we extract information about which contig belongs to the mutated reads and which one to the original simulated ones, as well as contig overlap length information. We extract them to a separate file for easier analysis and quicker fetching. An example of a graph obtained after assembly can be seen in Figure \ref{fig:graph}. Now, as we previously mentioned, our task is to separate the contigs into the father's and the mother's genome. In other words, if we are presented with a graph where nodes represent contigs and edges represent the overlaps between them, we need to remove edges between contigs that don't belong to the same parent. So for each edge, we give it a label, which is either "correct", i.e. it connects two contigs belonging to the same parent, or "incorrect", meaning it connect two contigs belonging to different parents.
 
 We now have a dataset where each edge has a label, as well as a feature in the form of overlap length. The ratio of the non mutated nodes compared to the mutated nodes is on average around 2.5, while the ratio of labels is roughly 40:60, which is fairly balanced and good enough for the task we are trying to solve. That being said, after separation, only one of the haplotypes is well defined, with the other one being highly fragmented and incomplete. This can be seen in Figure \ref{fig:separated graph}. We suspect this is in part happening due to the way Raven assembles contigs, as it isn't optimized for PacBio HiFi data. Looking into this is outside the scope of this thesis, but is worth exploring in more detail in further work. Nevertheless, we can hope of successfully extracting at least one haplotype, which is enough to prove that the problem statement of this thesis is feasible: separating haplotypes is a task that can be effectively solved by employing deep learning. With all that being said, we can now use the dataset we created as input to our model in which we will load it into memory, generate additional features and transform it into a format fit for training.
 
@@ -667,7 +667,7 @@ A smaller value for $L$ is better, so by minimizing this loss, we can train our 
 	\includegraphics[width=\textwidth]{images/accuracy_val.png}
 	\includegraphics[width=\textwidth]{images/f1_val.png}
 	\includegraphics[width=\textwidth]{images/loss_val.png}
-	\caption[Accuracy, f1-score and loss graph for one chromosome]{Graphs representing the accuracy (top), F1-score (middle) and model loss (bottom) for the validation part of a one chromosome dataset of a few different models. Epochs are displayed on the $x$ axis, while on the $y$ axis, we have the respective performance metric. The graphs were obtained with the help of TensorBoard (Section \ref{sec:technology stack}).}
+	\caption[Accuracy, f1-score and loss graph for one chromosome]{Graphs representing the accuracy (top), F1-score (middle) and model loss (bottom) for the validation part of a one chromosome dataset of a few different models. Epochs are displayed on the $x$ axis, while on the $y$ axis, we have the respective performance metric. The pink model is the best performing EGAT model, while the rest are a combination of different GCN and GAT models. The graphs were obtained with the help of TensorBoard (Section \ref{sec:technology stack}).}
 	\label{fig:accuracy and f1 graph}
 \end{figure}
 
@@ -755,7 +755,7 @@ In Figure \ref{fig:precision and recall} we can see the graphs for precision (to
 	\includegraphics[width=\textwidth]{images/acc_chr.png}
 	\includegraphics[width=\textwidth]{images/f1_chr.png}
 	\includegraphics[width=\textwidth]{images/loss_chr.png}
-	\caption[Accuracy,f1-score and loss graph for different chromosomes]{Graphs representing the accuracy (top), F1-score (middle) and model loss (bottom) for the validation part of the dataset for two different chromosome experiments. The models were trained for 250 epochs. The graphs were obtained using TensorBoard (Section \ref{sec:technology stack}).}
+	\caption[Accuracy,f1-score and loss graph for different chromosomes]{Graphs representing the accuracy (top), F1-score (middle) and model loss (bottom) for the validation part of the dataset for two different chromosome experiments. The models were trained for 250 epochs. The orange model was trained on the first chromosome of yeast and validated on the second, while the blue model was trained on chromosome three of yeast and validated on chromosome two. The graphs were obtained using TensorBoard (Section \ref{sec:technology stack}).}
 	\label{fig:accuracy, f1 score and loss chr}
 \end{figure}
 
@@ -768,7 +768,7 @@ To better test the claim that chromosomes share information, we ran experiments 
 	\centering
 	\includegraphics[width=\textwidth]{images/precision_chr.png}
 	\includegraphics[width=\textwidth]{images/recall_chr.png}
-	\caption[Precision and recall graph on chromosomes]{Graphs representing the precision (top) and recall (bottom) for the validation part for the two chromosome experiments. The graphs were obtained using TensorBoard (Section \ref{sec:technology stack}).}
+	\caption[Precision and recall graph on chromosomes]{Graphs representing the precision (top) and recall (bottom) for the validation part for the two chromosome experiments. The models were trained for 250 epochs. The orange model was trained on the first chromosome of yeast and validated on the second, while the blue model was trained on chromosome three of yeast and validated on chromosome two. The graphs were obtained using TensorBoard (Section \ref{sec:technology stack}).}
 	\label{fig:precision and recall chr}
 \end{figure}
 
